css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #FFF;
  font: 13.34px Helvetica, Arial, sans-serif;
  font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #00a; }
a:hover   { color: #000; }
a:visited { color: #a0a; }

table {
  font-size: inherit;
  font: 100%;
}

ul {
  margin-left: 1.35em;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts li {
  line-height: 1.75em;
}

ul.posts span {
  color: #aaa;
  font-family: Monaco, "Courier New", monospace;
  font-size: 80%;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 115%;
  text-align: justify;
  width: 52em;
  margin: 3em auto 2em;
  line-height: 1.5em;
}

.site .header {
  border-bottom: 4px solid #eee;
  margin-bottom: 1em;
  text-align: center;
}

.site .header a {
  font-weight: bold;
  text-decoration: none;
}

.site .header h1.title {
  display: inline-block;
  margin-bottom: 0em;
}

.site .header h1.title a {
  color: #56A0D3;
}

.site .header h1.title a:hover {
  color: #000;
}

.site .header a.extra {
  color: #aaa;
  margin-left: 1em;
}

.site .header a.extra:hover {
  color: #000;
}

.site .meta {
  color: #aaa;
}

.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  overflow: hidden;
}

.site .footer .contact {
  margin-right: 3em;
  text-align: center;
}

.site .footer .contact a {
  color: #8085C1;
}

.site .footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.site .footer .rss img {
  border: 0;
}

.site ul, .site ol {
  margin-left: 2em;
}


/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/


/* Images */

.post img{
  max-width: 500px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* standard */
.post h1 {
  font-size: 140%;
  margin-top: 1em;
}

.post h2 {
  font-size: 120%;
  margin-top: .5em;
}

.post h1 {
  font-size: 110%;
  margin-top: .5em;
}


pre {
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.end {
  margin-top: 1em;
  font-style: italic;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

.output {
    background: #ccc;
    color: #black;
    height: 100px;
    overflow: auto;
    font-family: "Consolas","Lucida Console","Monaco",monospace;
    font-size: 9pt;
}

pre {
margin-left: 14px;
font-size: 16px;
line-height: 1.2em;
}

code, pre {
  color: #444;
}

.codeblock{
  padding: 0 .4em;
  margin-left: 14px;
}
.codeblock pre.output{
  margin-left: 0;
  padding: 0;
}

.codeblock p{
  margin-bottom: 0;
}

